fix section width on mobile

--- a/css/general.css
+++ b/css/general.css
@@ -92,7 +92,7 @@ footer {
       line-height: 1.75;
   }
 
-  .content {
+  section {
     width: 100%;
   }
 
